# python-monorepo

./: .gitignore  README.md  dependency-graph.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre-commit-lint-format.sh  pyproject.toml  validate-deps.js  validate-deps.sh
.husky/: pre-commit
