[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-monorepo"
version = "0.1.0"
description = "Python monorepo containing foo and bar packages"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/python-monorepo"
Repository = "https://github.com/yourusername/python-monorepo.git"

# Centralized Dependency Management
# Security teams should review and approve changes to this section
[tool.monorepo.dependencies]
# Approved external packages (internal packages are automatically allowed)
approved = [
    "requests==2.31.0",
    "pytest==7.4.0", 
    "black==23.7.0",
    "mypy==1.5.1",
    "httpx==0.24.1",
    "pydantic==2.0.3",
    "pre-commit==3.3.3",
    "pytest-cov==4.1.0",
    "ruff==0.0.280",
]
